bpo-33375: Fix GCC warning in Python/_warnings.c (GH-7556)

_Py_IDENTIFIER(argv) is now unused.